tests/read/attribute_table_no_name/test.stderr
error: A struct must be annotated with `#[crud_table("table_name")]` to specify the database table
 --> tests/read/attribute_table_no_name/test.rs:4:1
  |
4 | / #[crud_table]
5 | | struct Test {
6 | |     #[crud_id]
7 | |     id: i64,
8 | |     name: String,
9 | | }
  | |_^

error[E0599]: no function or associated item named `read` found for struct `Test` in the current scope
  --> tests/read/attribute_table_no_name/test.rs:16:19
   |
5  | struct Test {
   | ----------- function or associated item `read` not found for this struct
...
16 |     let _ = Test::read(&pool, 1);
   |                   ^^^^ function or associated item not found in `Test`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following traits define an item `read`, perhaps you need to implement one of them:
           candidate #1: `AsyncReadExt`
           candidate #2: `digest::XofReader`
           candidate #3: `futures_util::io::AsyncReadExt`
           candidate #4: `sqlx_core::net::socket::Socket`
           candidate #5: `std::io::Read`
